--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,7 +2,7 @@ $enable-gradients: true;
 $enable-shadows: true;
 $theme-colors: (
   "primary":    #1993e2,
-  // "secondary":  red,
+  // "secondary":  hsla(0%, 0%, 90%, 1),
   // "success":    red,
   // "info":       red,
   // "warning":    red,
