--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9525,6 +9525,15 @@ a.text-dark:focus {
   margin-top: 2em;
 }
 
+.man-page-header .container {
+  border-bottom: 2px solid #1993e2;
+}
+
+.man-page-header .breadcrumb {
+  background: none;
+  padding: 0;
+}
+
 #view_in_terminal {
   font-family: monospace;
   background: #fff;
@@ -9536,7 +9545,23 @@ a.text-dark:focus {
     -webkit-box-ordinal-group: 0;
         -ms-flex-order: -1;
             order: -1;
-    margin-bottom: 2rem;
+  }
+}
+
+.actions {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+}
+
+@media (max-width: 767.98px) {
+  .actions {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
   }
 }
 
