Change navbar color to primary theme color

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9524,9 +9524,18 @@ a.text-dark:focus {
   font-style: normal;
 }
 
+.navbar {
+  border-top: 4px solid #1993e2;
+  padding: 0.35rem 1rem;
+}
+
+.bg-dark {
+  background-color: #1d2c37 !important;
+}
+
 .nav-item .nav-link {
-  margin-bottom: calc(-0.5rem - 0.05rem);
-  padding-bottom: calc(0.5rem + 4px);
+  margin-bottom: calc(-0.35rem - 0.05rem);
+  padding-bottom: calc(0.35rem + 4px);
 }
 
 .nav-item.active .nav-link {
